# game-of-life

./: README.md  check  lint  model.py  pyproject.toml  requirements.txt  run.py  state_functions.py  the_game.py
game_of_life/: model.py  run.py  the_game.py
tests/: test_game_of_life.py  test_model.py
