[tool.poetry]
name = "game_of_life"
version = "0.1.0"
description = ""
authors = ["Vibhu Agarwal <vibhu4agarwal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = "^22.6.0"
flake8 = "^5.0"
isort = "^5.10.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
